refactor: Java 25 refinements for stateless engine and schema
- YSessionCache: additional var locals and cleanup
- YSchemaVersion: diamond inference, var in static initializer
- YStatelessEngine: var locals, switch expressions, pattern matching
- stateless/YEngine: var locals, diamond inference
- stateless/YNetRunner: additional pattern matching instanceof improvements

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF