@@ -973,7 +973,7 @@ public class YNetRunner {
 
     public String toString() {
 
-        return String.format("CaseID: %s; Enabled: %s; Busy: %s", _caseIDForNet.toString(),
+        return "CaseID: %s; Enabled: %s; Busy: %s".formatted(_caseIDForNet.toString(),
                 setToCSV(_enabledTasks), setToCSV(_busyTasks));
     }
 
